# gift-flipper

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
services/bot-gateway/: .env.example  README.md  pyproject.toml
services/bot-gateway/bot_gateway/: __main__.py  main.py
services/bot-gateway/bot_gateway/bot/: factory.py
services/bot-gateway/bot_gateway/bot/keyboards/: menu.py
services/bot-gateway/bot_gateway/bot/middlewares/: i18n.py
services/bot-gateway/bot_gateway/bot/routers/: __init__.py  user.py
services/bot-gateway/bot_gateway/config/: .env.example  .secrets.toml.example  config.py  settings.py  settings.toml
services/bot-gateway/bot_gateway/locales/en/LC_MESSAGES/: txt.ftl
services/bot-gateway/bot_gateway/locales/ru/LC_MESSAGES/: txt.ftl
services/bot-gateway/bot_gateway/utils/: i18n.py
services/bot-gateway/tests/: conftest.py  mocked_aiogram.py  test_basic_commands.py  test_health.py
