[project]
name = "gift-flipper"
version = "0.1.0"
description = "Gift Flipper"
requires-python = ">=3.13"
readme = "README.md"

# Здесь ставим все сервисы проекта
[tool.uv.workspace]
members = ["services/bot-gateway"]

# Зависимости для разработки
[dependency-groups]
dev = [
  "ruff>=0.12.8",
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "types-requests>=2.32",
  "pre-commit>=4.3",
  "bot-gateway"
]

[tool.uv.sources]
bot-gateway = { workspace = true }


# Конфиг линтера ruff
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["infra/**", "docker/**"]
lint.select = ["E", "F", "I", "B", "UP", "W"]
lint.ignore = ["E501"]  # строки длиннее 100 не считаем ошибкой

# Конфиг форматтера ruff
[tool.ruff.format]
quote-style = "double"

# Настраиваем pytest
[tool.pytest.ini_options]
testpaths = [
	"tests",
	"services/bot-gateway/tests",
]
addopts = "-q" # quiet


# Статическая проверка типов
[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
