[project]
name = "bot_gateway"
version = "0.0.0"
description = "UI Telegram bot gateway"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot_gateway*"]

[tool.ruff]  # Наследуем стиль из корня, расширять не будем, просто ссылка
extend = "../../pyproject.toml"  # Брать общие настройки ruff из корня
