[project]
name = "bot_gateway"
version = "0.1.0"
description = "UI Telegram bot gateway"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
	"aiogram>=3.21.0",
	"dynaconf>=3.2.11",
	"httpx>=0.28.1",
	"uvloop>=0.21.0"
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta" # PEP 517

[tool.setuptools.packages.find]
where = ["."]
include = ["bot_gateway*"]
