[project]
name = "bot_gateway"
version = "0.5.0"
description = "UI Telegram bot gateway"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
	"python-dotenv>=1.1.1",
	"aiogram>=3.21.0",
	"pydantic>=2.1.7",
	"pydantic-settings>=2.10.1",
	"fluentogram>=1.2.1"
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta" # PEP 517

[tool.setuptools.packages.find]
where = ["."]
include = ["bot_gateway*"]
